k8s/local-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edge-db
spec:
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:15-alpine
        ports:
        - containerPort: 5432
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: edge-db-service
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
