k8s/local-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: retail-edge-node
spec:
  replicas: 1
  selector:
    matchLabels:
      app: retail-edge
  template:
    metadata:
      labels:
        app: retail-edge
    spec:
      containers:
      - name: retail-edge-node
        # Wir nutzen das lokal gebaute Image
        image: retail-edge-node:latest
        imagePullPolicy: Never 
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "300m"
            memory: "256Mi"
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: retail-edge-service
spec:
  type: LoadBalancer
  selector:
    app: retail-edge
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
